--- a/site/css/style.css
+++ b/site/css/style.css
@@ -299,7 +299,7 @@ a {
   padding: 100px 0;
 }
 
-.collection .title-section-text {
+.title-section-text.title-black {
   color: #181817;
 }
 
@@ -428,4 +428,119 @@ a {
   position: absolute;
   right: 0;
   top: 23px;
+}
+
+/*Project*/
+
+.project {
+  padding-top: 90px;
+}
+
+.project-box {
+  display: flex;
+  height: 1000px;
+  width: 100%;
+}
+
+.project-inner {
+  position: relative;
+}
+
+.project-inner-text {
+  font-size: 20px;
+  font-weight: 600;
+  color: #fafafa;
+  text-transform: uppercase;
+  transform: rotate(-90deg);
+  letter-spacing: 10px;
+  position: absolute;
+  left: -120px;
+  bottom: -720px;
+}
+
+.project-item {
+  width: 25%;
+}
+
+.project-item:nth-child(1) {
+  background: url('/img/slide1.png') no-repeat center;
+  background-size: cover;
+}
+
+.project-item:nth-child(2) {
+  background: url('/img/slide2.png') no-repeat center;
+  background-size: cover;
+}
+
+.project-item:nth-child(3) {
+  background: url('/img/slide3.png') no-repeat center;
+  background-size: cover;
+}
+
+.project-item:nth-child(4) {
+  background: url('/img/slide4.png') no-repeat center;
+  background-size: cover;
+}
+
+.project-title {
+  font-size: 30px;
+  font-weight: 600;
+  color: #fafafa;
+  text-transform: uppercase;
+  padding: 50px 60px 0 60px;
+}
+
+/*Blog*/
+
+.blog {
+  padding: 100px 0 110px 0;
+}
+
+.blog-box {
+  display: flex;
+}
+
+.blog-button {
+  width: 160px;
+  height: 50px;
+  background-color: #ffce76;
+  padding: 15px 0 0 20px;
+}
+
+.blog-button i {
+  color: #000;
+  font-size: 15px;
+}
+
+.blog-img {
+  width: 100%;
+}
+
+.blog-inner {
+  padding: 40px 25px 20px 25px;
+}
+
+.blog-item {
+  width: 33.333%;
+}
+
+.blog-item:not(.blog-item:last-child) {
+  margin-right: 30px;
+}
+
+.blog-link {
+  text-transform: uppercase;
+  color: #000;
+  font-weight: 600;
+}
+
+.blog-text {
+  margin: 25px 0 30px 0;
+}
+
+.blog-title {
+  font-size: 20px;
+  font-weight: 600;
+  color: #000;
+  text-transform: uppercase;
 }
