--- a/site/css/style.css
+++ b/site/css/style.css
@@ -463,7 +463,7 @@ a {
 }
 
 .project-item.first {
-  background: url('../img/slide1.png') no-repeat center;
+  background: url('../img/plane.png') no-repeat center;
   background-size: cover;
 }
 
