--- a/site/css/style.css
+++ b/site/css/style.css
@@ -468,17 +468,17 @@ a {
 }
 
 .project-item:nth-child(2) {
-  background: url('/img/slide2.png') no-repeat center;
+  background: url('../img/slide2.png') no-repeat center;
   background-size: cover;
 }
 
 .project-item:nth-child(3) {
-  background: url('/img/slide3.png') no-repeat center;
+  background: url('../img/slide3.png') no-repeat center;
   background-size: cover;
 }
 
 .project-item:nth-child(4) {
-  background: url('/img/slide4.png') no-repeat center;
+  background: url('../img/slide4.png') no-repeat center;
   background-size: cover;
 }
 
